# Face_Test

./: .gitignore  README.md
demo/Dlib_Test/: Dlib_Test.cpp  funset.cpp  funset.hpp
demo/IntelTBB_Test/: IntelTBB_Test.cpp  funset.cpp  funset.hpp
demo/OpenCV_Test/: OpenCV_Test.cpp  funset.cpp  funset.hpp
demo/SeetaFaceEngine_Test/: SeetaFaceEngine_Test.cpp  funset.cpp  funset.hpp
demo/Tadas_OpenFace_Test/: FaceLandmarkImg.cpp  Tadas_OpenFace_Test.cpp  funset.cpp  funset.hpp
demo/libfacedetection/: libfacedetection_Test.cpp
prj/linux_cmake_Dlib_Test/: CMakeLists.txt  build.sh
prj/linux_cmake_IntelTBB_Test/: CMakeLists.txt  build.sh
prj/linux_cmake_OpenCV_Test/: CMakeLists.txt  build.sh
prj/linux_cmake_SeetaFaceEngine_Test/: CMakeLists.txt  build.sh
prj/x86_x64_vc12/Dlib/: Dlib.vcxproj  Dlib.vcxproj.filters
prj/x86_x64_vc12/Dlib_Test/: Dlib_Test.vcxproj  Dlib_Test.vcxproj.filters
prj/x86_x64_vc12/Face_Test/: Face_Test.sln
prj/x86_x64_vc12/IntelTBB_Test/: IntelTBB_Test.vcxproj  IntelTBB_Test.vcxproj.filters
prj/x86_x64_vc12/OpenCV_Test/: OpenCV_Test.vcxproj  OpenCV_Test.vcxproj.filters
prj/x86_x64_vc12/SeetaFaceEngine_FaceAlignment/: SeetaFaceEngine_FaceAlignment.vcxproj  SeetaFaceEngine_FaceAlignment.vcxproj.filters
prj/x86_x64_vc12/SeetaFaceEngine_FaceDetection/: SeetaFaceEngine_FaceDetection.vcxproj  SeetaFaceEngine_FaceDetection.vcxproj.filters
prj/x86_x64_vc12/SeetaFaceEngine_FaceIdentification/: SeetaFaceEngine_FaceIdentification.vcxproj  SeetaFaceEngine_FaceIdentification.vcxproj.filters
prj/x86_x64_vc12/SeetaFaceEngine_Test/: SeetaFaceEngine_Test.vcxproj  SeetaFaceEngine_Test.vcxproj.filters
prj/x86_x64_vc12/Tadas_OpenFace_FaceAnalyser/: Tadas_OpenFace_FaceAnalyser.vcxproj  Tadas_OpenFace_FaceAnalyser.vcxproj.filters
prj/x86_x64_vc12/Tadas_OpenFace_LandmarkDetector/: Tadas_OpenFace_LandmarkDetector.vcxproj  Tadas_OpenFace_LandmarkDetector.vcxproj.filters
prj/x86_x64_vc12/Tadas_OpenFace_Test/: Tadas_OpenFace_Test.vcxproj  Tadas_OpenFace_Test.vcxproj.filters
prj/x86_x64_vc12/libfacedetection_Test/: libfacedetection_Test.vcxproj  libfacedetection_Test.vcxproj.filters
prj/x86_x64_vc12/tbb/: tbb.def  tbb.vcxproj  tbb.vcxproj.filters
prj/x86_x64_vc12/tbbmalloc/: tbbmalloc.def  tbbmalloc.vcxproj  tbbmalloc.vcxproj.filters
prj/x86_x64_vc12/tbbmalloc_proxy/: tbbmalloc_proxy.vcxproj  tbbmalloc_proxy.vcxproj.filters
src/: Version.txt  version.txt
src/Intel_TBB/: README.md
src/Intel_TBB/include/tbb/: runtime_loader.h  scalable_allocator.h  tbbmalloc_proxy.h
src/Intel_TBB/include/tbb/internal/: _tbb_windef.h
src/SeetaFaceEngine/FaceIdentification/: CMakeLists.txt
src/TadasBaltrusaitis_OpenFace/: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
src/TadasBaltrusaitis_OpenFace/exe/FaceLandmarkImg/: CMakeLists.txt  FaceLandmarkImg.cpp  FaceLandmarkImg.vcxproj
src/TadasBaltrusaitis_OpenFace/exe/FaceLandmarkVid/: CMakeLists.txt  FaceLandmarkVid.cpp  FaceLandmarkVid.vcxproj
src/TadasBaltrusaitis_OpenFace/exe/FaceLandmarkVidMulti/: CMakeLists.txt  FaceLandmarkVidMulti.cpp  FaceLandmarkVidMulti.vcxproj
src/TadasBaltrusaitis_OpenFace/exe/FeatureExtraction/: CMakeLists.txt  FeatureExtraction.cpp  FeatureExtraction.vcxproj
src/TadasBaltrusaitis_OpenFace/exe/Recording/: Record.cpp  Recording.vcxproj
src/TadasBaltrusaitis_OpenFace/lib/local/FaceAnalyser/: CMakeLists.txt
src/TadasBaltrusaitis_OpenFace/lib/local/FaceAnalyser/include/: FaceAnalyser.h  Face_utils.h  GazeEstimation.h  SVM_dynamic_lin.h  SVM_static_lin.h  SVR_dynamic_lin_regressors.h  SVR_static_lin_regressors.h
src/TadasBaltrusaitis_OpenFace/lib/local/FaceAnalyser/src/: FaceAnalyser.cpp  Face_utils.cpp  GazeEstimation.cpp  SVM_dynamic_lin.cpp  SVM_static_lin.cpp  SVR_dynamic_lin_regressors.cpp  SVR_static_lin_regressors.cpp
src/TadasBaltrusaitis_OpenFace/lib/local/LandmarkDetector/: CMakeLists.txt  LandmarkDetector.vcxproj
src/TadasBaltrusaitis_OpenFace/lib/local/LandmarkDetector/AU_predictors/: AU_all_best.txt  AU_all_static.txt
src/TadasBaltrusaitis_OpenFace/lib/local/LandmarkDetector/include/: CCNF_patch_expert.h  LandmarkCoreIncludes.h  LandmarkDetectionValidator.h  LandmarkDetectorFunc.h  LandmarkDetectorModel.h  LandmarkDetectorParameters.h  LandmarkDetectorUtils.h  PAW.h  PDM.h  Patch_experts.h
src/TadasBaltrusaitis_OpenFace/lib/local/LandmarkDetector/src/: CCNF_patch_expert.cpp  LandmarkDetectionValidator.cpp  LandmarkDetectorFunc.cpp  LandmarkDetectorModel.cpp  LandmarkDetectorParameters.cpp  LandmarkDetectorUtils.cpp  PAW.cpp  PDM.cpp  Patch_experts.cpp  SVR_patch_expert.cpp
src/dlib/dlib/matrix/: matrix_utilities.h
src/dlib/dlib/threads/: threads_kernel_shared.h
src/libfacedetection/include/: facedetect-dll.h
